aerocore_build_11.log
Script started on Mon 27 Jun 2016 01:20:09 PM EDT
]0;jessica@mcwiljl-ll1: ~/src/Firmwarejessica@mcwiljl-ll1:~/src/Firmware$ make aerocore_default 
PX4 CONFIG: aerocore_default
[  2%] Built target git_nuttx
[  2%] Built target git_gencpp
[  2%] Built target git_genmsg
[  2%] Built target git_mavlink
[  2%] Built target git_matrix
[  2%] Built target git_uavcan
[  2%] Built target git_ecl
[  3%] Built target romfs
[  4%] Built target mixer_gen
[  4%] Built target nuttx_export_aerocore
[  4%] Built target prebuild_targets
[ 29%] Built target msg_gen
[ 30%] Built target platforms__common
[ 30%] Built target platforms__nuttx
[ 31%] Built target drivers__stm32__adc
[ 32%] Built target drivers__stm32
[ 32%] Built target drivers__stm32__tone_alarm
[ 36%] Built target drivers__device
[ 37%] Built target drivers__led
[ 38%] Built target drivers__px4fmu
[ 38%] Built target drivers__lsm303d
[ 38%] Built target drivers__l3gd20
[ 39%] Built target drivers__boards__aerocore
[ 40%] Built target drivers__ms5611
[35m[1mScanning dependencies of target drivers__pwm_input[0m
[ 40%] [32mBuilding CXX object src/drivers/hil/CMakeFiles/drivers__hil.dir/hil.cpp.obj[0m
[ 41%] Built target drivers__gps
[ 41%] Built target modules__sensors
[35m[1mScanning dependencies of target systemcmds__mixer[0m
[35m[1mScanning dependencies of target drivers__aerocore_rc[0m
[ 42%] [32mBuilding CXX object src/drivers/pwm_input/CMakeFiles/drivers__pwm_input.dir/pwm_input.cpp.obj[0m
In file included from /home/jessica/src/Firmware/src/platforms/px4_includes.h:77:0,
                 from /home/jessica/src/Firmware/src/platforms/px4_defines.h:76,
                 from /home/jessica/src/Firmware/src/platforms/px4_posix.h:42,
                 from /home/jessica/src/Firmware/src/drivers/device/device_nuttx.h:47,
                 from /home/jessica/src/Firmware/src/drivers/device/device.h:37,
                 from /home/jessica/src/Firmware/src/drivers/hil/hil.cpp:68:
/home/jessica/src/Firmware/build_aerocore_default/src/platforms/nuttx/px4_messages/px4_actuator_controls.h: In static member function 'static const orb_metadata* px4::px4_actuator_controls_0::handle()':
/home/jessica/src/Firmware/src/modules/uORB/uORB.h:89:25: error: '__orb_actuator_controls_0' was not declared in this scope
 #define ORB_ID(_name)  &__orb_##_name
                         ^
/home/jessica/src/Firmware/build_aerocore_default/src/platforms/nuttx/px4_messages/px4_actuator_controls.h:79:41: note: in expansion of macro 'ORB_ID'
  static PX4TopicHandle handle() {return ORB_ID(actuator_controls_0);}
                                         ^
compilation terminated due to -Wfatal-errors.
make[3]: *** [src/drivers/hil/CMakeFiles/drivers__hil.dir/hil.cpp.obj] Error 1
make[2]: *** [src/drivers/hil/CMakeFiles/drivers__hil.dir/all] Error 2
make[2]: *** Waiting for unfinished jobs....
[ 43%] [32mBuilding CXX object src/systemcmds/mixer/CMakeFiles/systemcmds__mixer.dir/mixer.cpp.obj[0m
In file included from /home/jessica/src/Firmware/src/platforms/px4_includes.h:77:0,
                 from /home/jessica/src/Firmware/src/platforms/px4_defines.h:76,
                 from /home/jessica/src/Firmware/src/drivers/drv_sensor.h:43,
                 from /home/jessica/src/Firmware/src/drivers/drv_range_finder.h:44,
                 from /home/jessica/src/Firmware/src/drivers/pwm_input/pwm_input.cpp:64:
/home/jessica/src/Firmware/build_aerocore_default/src/platforms/nuttx/px4_messages/px4_actuator_controls.h: In static member function 'static const orb_metadata* px4::px4_actuator_controls_0::handle()':
/home/jessica/src/Firmware/src/modules/uORB/uORB.h:89:25: error: '__orb_actuator_controls_0' was not declared in this scope
 #define ORB_ID(_name)  &__orb_##_name
                         ^
/home/jessica/src/Firmware/build_aerocore_default/src/platforms/nuttx/px4_messages/px4_actuator_controls.h:79:41: note: in expansion of macro 'ORB_ID'
  static PX4TopicHandle handle() {return ORB_ID(actuator_controls_0);}
                                         ^
compilation terminated due to -Wfatal-errors.
make[3]: *** [src/drivers/pwm_input/CMakeFiles/drivers__pwm_input.dir/pwm_input.cpp.obj] Error 1
make[2]: *** [src/drivers/pwm_input/CMakeFiles/drivers__pwm_input.dir/all] Error 2
[ 44%] [32mBuilding CXX object src/drivers/aerocore_rc/CMakeFiles/drivers__aerocore_rc.dir/aerocore_rc.cpp.obj[0m
[ 44%] [32mBuilding C object src/drivers/aerocore_rc/CMakeFiles/drivers__aerocore_rc.dir/controls.c.obj[0m
[ 44%] [32mBuilding C object src/drivers/aerocore_rc/CMakeFiles/drivers__aerocore_rc.dir/registers.c.obj[0m
In file included from /home/jessica/src/Firmware/src/platforms/px4_includes.h:77:0,
                 from /home/jessica/src/Firmware/src/platforms/px4_defines.h:76,
                 from /home/jessica/src/Firmware/src/platforms/px4_posix.h:42,
                 from /home/jessica/src/Firmware/src/systemcmds/mixer/mixer.cpp:41:
/home/jessica/src/Firmware/build_aerocore_default/src/platforms/nuttx/px4_messages/px4_actuator_controls.h: In static member function 'static const orb_metadata* px4::px4_actuator_controls_0::handle()':
/home/jessica/src/Firmware/src/modules/uORB/uORB.h:89:25: error: '__orb_actuator_controls_0' was not declared in this scope
 #define ORB_ID(_name)  &__orb_##_name
                         ^
/home/jessica/src/Firmware/build_aerocore_default/src/platforms/nuttx/px4_messages/px4_actuator_controls.h:79:41: note: in expansion of macro 'ORB_ID'
  static PX4TopicHandle handle() {return ORB_ID(actuator_controls_0);}
                                         ^
compilation terminated due to -Wfatal-errors.
make[3]: *** [src/systemcmds/mixer/CMakeFiles/systemcmds__mixer.dir/mixer.cpp.obj] Error 1
make[2]: *** [src/systemcmds/mixer/CMakeFiles/systemcmds__mixer.dir/all] Error 2
[ 44%] [32mBuilding C object src/drivers/aerocore_rc/CMakeFiles/drivers__aerocore_rc.dir/dsm.c.obj[0m
In file included from /home/jessica/src/Firmware/src/platforms/px4_includes.h:77:0,
                 from /home/jessica/src/Firmware/src/platforms/px4_defines.h:76,
                 from /home/jessica/src/Firmware/src/platforms/px4_posix.h:42,
                 from /home/jessica/src/Firmware/src/drivers/device/device_nuttx.h:47,
                 from /home/jessica/src/Firmware/src/drivers/device/device.h:37,
                 from /home/jessica/src/Firmware/src/drivers/aerocore_rc/aerocore_rc.cpp:61:
/home/jessica/src/Firmware/build_aerocore_default/src/platforms/nuttx/px4_messages/px4_actuator_controls.h: In static member function 'static const orb_metadata* px4::px4_actuator_controls_0::handle()':
/home/jessica/src/Firmware/src/modules/uORB/uORB.h:89:25: error: '__orb_actuator_controls_0' was not declared in this scope
 #define ORB_ID(_name)  &__orb_##_name
                         ^
/home/jessica/src/Firmware/build_aerocore_default/src/platforms/nuttx/px4_messages/px4_actuator_controls.h:79:41: note: in expansion of macro 'ORB_ID'
  static PX4TopicHandle handle() {return ORB_ID(actuator_controls_0);}
                                         ^
compilation terminated due to -Wfatal-errors.
make[3]: *** [src/drivers/aerocore_rc/CMakeFiles/drivers__aerocore_rc.dir/aerocore_rc.cpp.obj] Error 1
make[3]: *** Waiting for unfinished jobs....
In file included from /home/jessica/src/Firmware/src/drivers/aerocore_rc/dsm.c:51:0:
/home/jessica/src/Firmware/src/drivers/aerocore_rc/dsm.c: In function 'dsm_init':
/home/jessica/src/Firmware/src/drivers/aerocore_rc/aerocore_rc.h:139:45: error: 'GPIO_SPEKTRUM_PWR_EN' undeclared (first use in this function)
 # define POWER_SPEKTRUM(_s) stm32_gpiowrite(GPIO_SPEKTRUM_PWR_EN, (_s))
                                             ^
/home/jessica/src/Firmware/src/drivers/aerocore_rc/dsm.c:207:2: note: in expansion of macro 'POWER_SPEKTRUM'
  POWER_SPEKTRUM(true);
  ^
compilation terminated due to -Wfatal-errors.
make[3]: *** [src/drivers/aerocore_rc/CMakeFiles/drivers__aerocore_rc.dir/dsm.c.obj] Error 1
make[2]: *** [src/drivers/aerocore_rc/CMakeFiles/drivers__aerocore_rc.dir/all] Error 2
make[1]: *** [all] Error 2
make: *** [aerocore_default] Error 2
]0;jessica@mcwiljl-ll1: ~/src/Firmwarejessica@mcwiljl-ll1:~/src/Firmware$ exit
exit

Script done on Mon 27 Jun 2016 01:20:24 PM EDT
